# opentrons-flex

./: .cruft.json  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.build  README.md  deploy.sh  deploy_executable.sh  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: build-flex-arm-wheels.yml  test.yml
.gitlab/issue_templates/: Bug.md
config/: flex_acceptance.example.json  flex_config.json  robot_settings.json  smoketest_config.json
dev/tailscale setup/: plan.md  setup_tailscale.sh
docs/: asms_flex_workflow_test.md  flex_system_acceptance.md  parity_matrix.json  parity_matrix.md
docs/plans/: 2026-06-26-opentrons-flex-design.md
protocols/asms/: README.md  asms_single_point_wash_and_elute.py
scripts/: _smoke_flex.py  artifact_manifest.py  deploy_python_changes.sh  install.sh  install_connector_service.sh  preflight_flex.py  rollback_connector.sh  run_asms_hardware.py  sila_client_control.py  start_connector.sh  switch_mode.sh  validate_asms_protocol.py
tests/: conftest.py  test_acceptance_manifest.py  test_create_app.py  test_create_app_with_robot_server.py  test_run_mutation.py  test_runtime_compat.py  test_runtime_preflight.py  test_smoketest_config.py  test_version.py  test_workflow_manifests.py
tests/features/: test_flex_feature_definitions.py  test_flex_simulation.py  test_lock.py  test_module_feature_endpoints.py  (+3 more)
workflows/flex-system-acceptance/: pyproject.toml
workflows/flex-system-acceptance/src/flex_system_acceptance/: __init__.py  __main__.py  _helpers.py  _steps.py  workflow.py
(+98 files in other folders)
